manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-app-deployment
  labels:
    app: argocd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-app
  template:
    metadata:
      labels:
        app: argocd-app
    spec:
      containers:
        - name: argocd-app
          image: mendhak/http-https-echo:35
          ports:
            - containerPort: 8888
            - containerPort: 8443
