manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-app-service
spec:
  type: ClusterIP
  selector:
    app: argocd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
      name: http
    - protocol: TCP
      port: 8433
      targetPort: 8433
      name: https
