manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - http:
        paths:
          - path: /argocd-app
            pathType: Prefix
            backend:
              service:
                name: argocd-app-service
                port:
                  number: 80
